test/assets/network-policy/netpol-egress-ns-label.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-ns-label
spec:
  podSelector:
    matchLabels:
      app: hello-microshift
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          team: openshift
  policyTypes:
  - Egress
