test/assets/network-policy/netpol-ingress-pod-ns-label.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-pod-ns-label
spec:
  podSelector:
    matchLabels:
      app: hello-microshift
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          team: operations
      podSelector:
        matchLabels:
          name: test-pods
  policyTypes:
  - Ingress
